--- a/apple-all/pom.xml
+++ b/apple-all/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.mizhousoft.apple</groupId>
+		<groupId>com.mizhousoft.sdk</groupId>
 		<artifactId>apple-sdk</artifactId>
 		<version>1.0.0</version>
 	</parent>
@@ -20,17 +20,17 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.mizhousoft.apple</groupId>
+			<groupId>com.mizhousoft.sdk</groupId>
 			<artifactId>apple-common</artifactId>
 			<version>${apple.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mizhousoft.apple</groupId>
+			<groupId>com.mizhousoft.sdk</groupId>
 			<artifactId>apple-inapp-purchase</artifactId>
 			<version>${apple.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mizhousoft.apple</groupId>
+			<groupId>com.mizhousoft.sdk</groupId>
 			<artifactId>apple-open</artifactId>
 			<version>${apple.version}</version>
 		</dependency>
@@ -52,9 +52,9 @@
 							<promoteTransitiveDependencies>true</promoteTransitiveDependencies>
 							<artifactSet>
 								<includes>
-									<include>com.mizhousoft.apple:apple-common</include>
-									<include>com.mizhousoft.apple:apple-inapp-purchase</include>
-									<include>com.mizhousoft.apple:apple-open</include>
+									<include>com.mizhousoft.sdk:apple-common</include>
+									<include>com.mizhousoft.sdk:apple-inapp-purchase</include>
+									<include>com.mizhousoft.sdk:apple-open</include>
 								</includes>
 							</artifactSet>
 						</configuration>
@@ -79,7 +79,7 @@
 				<configuration>
 					<includeDependencySources>true</includeDependencySources>
 					<dependencySourceIncludes>
-						<dependencySourceInclude>com.mizhousoft.apple:apple-*</dependencySourceInclude>
+						<dependencySourceInclude>com.mizhousoft.sdk:apple-*</dependencySourceInclude>
 					</dependencySourceIncludes>
 					<show>public</show>
 					<charset>UTF-8</charset>
