--- a/apple-open/pom.xml
+++ b/apple-open/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.mizhousoft.apple</groupId>
+		<groupId>com.mizhousoft.sdk</groupId>
 		<artifactId>apple-sdk</artifactId>
 		<version>1.0.0</version>
 	</parent>
@@ -20,7 +20,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.mizhousoft.apple</groupId>
+			<groupId>com.mizhousoft.sdk</groupId>
 			<artifactId>apple-common</artifactId>
 			<version>${apple.version}</version>
 		</dependency>
