--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,20 @@
 	<parent>
 		<groupId>com.mizhousoft</groupId>
 		<artifactId>mizhousoft</artifactId>
-		<version>1.1.0</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.mizhousoft.sdk</groupId>
 	<artifactId>apple-sdk</artifactId>
-	<version>1.0.2</version>
+	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>apple-sdk</name>
 	<description>Apple SDK</description>
 
 	<properties>
-		<commons.version>1.0.2</commons.version>
-		<apple.version>1.0.2</apple.version>
+		<commons.version>1.1.0-SNAPSHOT</commons.version>
+		<apple.version>1.1.0-SNAPSHOT</apple.version>
 	</properties>
 
 	<modules>
