解决依赖SNAPSHOT打包问题

--- a/apple-all/pom.xml
+++ b/apple-all/pom.xml
@@ -50,6 +50,7 @@
 						<configuration>
 							<createSourcesJar>true</createSourcesJar>
 							<promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+							<useBaseVersion>true</useBaseVersion>
 							<artifactSet>
 								<includes>
 									<include>com.mizhousoft.sdk:apple-common</include>
