--- a/apple-all/pom.xml
+++ b/apple-all/pom.xml
@@ -73,7 +73,7 @@
 						</goals>
 						<configuration>
 							<failOnError>false</failOnError>
-							<additionalparam>-Xdoclint:none</additionalparam>
+							<additionalJOption>-Xdoclint:none</additionalJOption>
 						</configuration>
 					</execution>
 				</executions>
