--- a/apple-inapp-purchase/pom.xml
+++ b/apple-inapp-purchase/pom.xml
@@ -25,11 +25,6 @@
 			<version>${apple.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.mizhousoft.boot</groupId>
-			<artifactId>restclient-spring-boot-starter</artifactId>
-			<version>${mizhousoft.boot.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
@@ -49,6 +44,14 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>com.konghq</groupId>
+	        <artifactId>unirest-java-core</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.konghq</groupId>
+	        <artifactId>unirest-objectmapper-jackson</artifactId>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
