--- a/apple-open/pom.xml
+++ b/apple-open/pom.xml
@@ -37,15 +37,13 @@
 			<artifactId>jjwt-jackson</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpasyncclient</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents.client5</groupId>
-			<artifactId>httpclient5</artifactId>
-			<scope>test</scope>
-		</dependency>
+	        <groupId>com.konghq</groupId>
+	        <artifactId>unirest-java-core</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.konghq</groupId>
+	        <artifactId>unirest-objectmapper-jackson</artifactId>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
