升级第三方组件

--- a/apple-inapp-purchase/pom.xml
+++ b/apple-inapp-purchase/pom.xml
@@ -50,7 +50,7 @@
 	    </dependency>
 	    <dependency>
 	        <groupId>com.konghq</groupId>
-	        <artifactId>unirest-objectmapper-jackson</artifactId>
+	        <artifactId>unirest-modules-jackson</artifactId>
 	    </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
