--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,21 @@
 	<parent>
 		<groupId>com.mizhousoft</groupId>
 		<artifactId>mizhousoft-bom</artifactId>
-		<version>2.1.1</version>
+		<version>2.1.2-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.mizhousoft.sdk</groupId>
 	<artifactId>apple-sdk</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>apple-sdk</name>
 	<description>Apple SDK</description>
 
 	<properties>
-		<commons.version>2.1.1</commons.version>
+		<commons.version>2.1.2-SNAPSHOT</commons.version>
 		
-		<apple.version>2.1.1</apple.version>
+		<apple.version>2.1.2-SNAPSHOT</apple.version>
 	</properties>
 
 	<modules>
