--- a/apple-open/pom.xml
+++ b/apple-open/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.mizhousoft.sdk</groupId>
 		<artifactId>apple-sdk</artifactId>
-		<version>2.1.2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 
 	<artifactId>apple-open</artifactId>
