--- a/apple-spring-boot-starter/pom.xml
+++ b/apple-spring-boot-starter/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.mizhousoft.sdk</groupId>
 		<artifactId>apple-sdk</artifactId>
-		<version>2.1.2</version>
+		<version>2.1.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>apple-spring-boot-starter</artifactId>
