--- a/apple-common/pom.xml
+++ b/apple-common/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.mizhousoft.sdk</groupId>
 		<artifactId>apple-sdk</artifactId>
-		<version>2.1.3-SNAPSHOT</version>
+		<version>3.0.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>apple-common</artifactId>
@@ -25,7 +25,7 @@
 			<version>${commons.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
+			<groupId>tools.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 	</dependencies>
